--- a/DichVuBus/WebBus/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
+++ b/DichVuBus/WebBus/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
@@ -66,7 +66,7 @@
                         <ul>
                             <li><a class="active" href="/HocSinh/Home/Index" title="">Trang Chủ</a></li>
                             @*<li><a href="/HocSinh/Home/ThongTin" title="">Xe Bus</a></li>
-                                <li><a href="/HocSinh/TuyenSinh/ListTuyenSinh" title="">Lịch Trình</a></li>*@
+                            <li><a href="/HocSinh/TuyenSinh/ListTuyenSinh" title="">Lịch Trình</a></li>*@
                             @if (Session["HocSinh"] == null)
                             {
                                 <li>
@@ -115,17 +115,17 @@
             </ul>
         </div>
         <!--responsive-menu end-->
-        <section class="pager-section">
+        <section class="pager-section" style="display: none">
             <div class="container">
                 <div class="pager-content text-center">
                     @*<h2>Classes</h2>
-                            <ul>
-                                <li><a href="#" title="">Home</a></li>
-                                <li><span>Classes</span></li>
-                        </ul>*@
+                        <ul>
+                            <li><a href="#" title="">Home</a></li>
+                            <li><span>Classes</span></li>
+                    </ul>*@
                 </div>
                 <!--pager-content end-->
-                <h2 class="page-titlee">THPT</h2>
+                <h2 class="page-titlee">BUS</h2>
             </div>
         </section>
         <!--pager-section end-->
@@ -140,7 +140,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="widget widget-about">
                                 <img src="~/Assets/HocSinh/img/logo.png" alt="">
-                                <p>Website mục đích để truyền đạt thông tin, tra cứu thông tin với học sinh THCS nhằm đăng kí các nguyện vọng vào các trường THPT Lạng Giang</p>
+                                <p>Website mục đích để cung cấp thông tin dịch vụ Bus dành cho học sinh sinh viên, thuân tiện cho việc đến trường</p>
                             </div>
                             <!--widget-about end-->
                         </div>
@@ -169,7 +169,7 @@
                                             <img src="~/Assets/HocSinh/img/icon3.png" alt="">
                                             <div class="contact-tt">
                                                 <h4>Địa Chỉ</h4>
-                                                <span>87X6+5R2, Phi Mô,<br /> Lạng Giang, Bắc Giang</span>
+                                                <span>123 Lý Thái Tổ<br /> Hồ Chí Minh</span>
                                             </div>
                                         </div>
                                         <!--contact-info end-->
@@ -183,7 +183,7 @@
                                 <h3 class="widget-title">Điều Hướng</h3>
                                 <ul>
                                     <li><a href="about.html" title="">Trang Chủ</a></li>
-                                    <li><a href="classes.html" title="">Tuyển Sinh</a></li>
+                                    <li><a href="classes.html" title="">Xe Bus</a></li>
                                     <li><a href="teachers.html" title="">School Teachers</a></li>
                                     <li><a href="events.html" title="">Recent Events</a></li>
                                     <li><a href="blog.html" title="">Our News</a></li>
